--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/vue": "^4.1.1",
     "@productdevbook/chatwoot": "^1.2.0",
     "@vueuse/core": "^10.3.0",
+    "html-to-image": "^1.11.11",
     "interactjs": "^1.10.18",
     "nuxt-vue3-google-signin": "^0.0.9",
     "pinia": "^2.1.4",
