--- a/package.json
+++ b/package.json
@@ -1,42 +1,24 @@
 {
-  "name": "cards-dragging-resizing",
+  "name": "app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@iconify/vue": "^4.1.1",
-    "@productdevbook/chatwoot": "^1.2.0",
-    "@vueuse/core": "^10.3.0",
-    "html-to-image": "^1.11.11",
-    "interactjs": "^1.10.18",
-    "nuxt-vue3-google-signin": "^0.0.9",
-    "pinia": "^2.1.4",
-    "vue": "^3.3.4",
-    "vue-drag-resize": "^1.5.4",
-    "vue-social-sharing": "^4.0.0-alpha4"
+    "axios": "^1.6.1",
+    "mitt": "^3.0.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.40.1",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@tsconfig/node18": "^18.2.0",
-    "@types/node": "^18.17.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
-    "typescript": "~5.1.6",
-    "vite": "^4.4.6",
-    "vue-tsc": "^1.8.6"
+    "@vitejs/plugin-vue": "^4.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^4.4.11"
   }
 }
